infra/k8s/apps/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      restartPolicy: Always
      containers:
        - name: auth
          image: ghcr.io/henshiapp/henshi-auth:latest
          resources:
            limits:
              memory: '512Mi'
              cpu: '250m'
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
