infra/k8s/apps/users-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      restartPolicy: Always
      containers:
        - name: users
          image: ghcr.io/henshiapp/henshi-users:latest
          resources:
            limits:
              memory: '512Mi'
              cpu: '250m'
---
apiVersion: v1
kind: Service
metadata:
  name: users-srv
spec:
  selector:
    app: users
  ports:
    - name: users
      protocol: TCP
      port: 3000
      targetPort: 3000
